still need to figure out why OBJECT CANNOT BE CONVERTED TO E